--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,25 @@
 {
-  "name": "__MSG_extensionName__",
-  "description": "__MSG_extensionDescription__",
-  "version": "4",
+  "name": "PowerFolder",
+  "description": "PowerFolder FileUpload",
+  "version": "1",
   "applications": {
     "gecko": {
-      "id": "dav-cloudfile@darktrojan.net",
-      "strict_min_version": "91.0",
+      "id": "kluch@powerfolder.com",
+      "strict_min_version": "60.0",
       "strict_max_version": "91.*"
     }
   },
+  "icons": {
+    "48": "icon48.png"
+  },
+
   "background": {
     "scripts": [
       "background.js"
     ]
   },
   "cloud_file": {
-    "name": "__MSG_serviceName__",
+    "name": "PowerFolder",
     "data_format": "File",
     "management_url": "management.html"
   },
