--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Default ignored files
 /shelf/
-/dist/
 /workspace.xml
 # Datasource local storage ignored files
 /dataSources.local.xml
 # Editor-based HTTP Client requests
 /httpRequests/
+
+# dependencies
+/dist
